Matriz, Divisões e Suportes

--- a/site/style.css
+++ b/site/style.css
@@ -368,7 +368,7 @@
   justify-content: space-around;
   align-items: flex-start;
   align-content: flex-start;
-  padding: 6vw 9vw;
+  padding: 6vw 6vw;
 }
 
 #historia img {
@@ -434,8 +434,10 @@
 }
 
 #mapa {
-  width: 80%;
+  width: 100%;
   margin: 2vw 0vw;
+  background-image: url("img/mapa/fundo_mapa.webp");
+  background-size: cover;
 }
 
 .mapa_bandeiras {
@@ -449,10 +451,6 @@
 }
 
 .mat_div_sup {
-  padding: 0.5vw 0vw;
-}
-
-.mat_div_sup li {
   padding: 0.5vw 0vw;
 }
 
@@ -490,6 +488,10 @@
 
 .bandeira_cidades {
   display: flex;
+}
+
+.bandeira_cidades li {
+  padding: 0.5vw 0vw;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -661,6 +663,10 @@
     padding: 8vw 7vw;
   }
 
+  #historia .texto {
+    width: 100%;
+  }
+
   #historia img {
     margin-top: 5vw;
     width: 80%;
@@ -701,6 +707,10 @@
     justify-content: center;
     align-items: flex-start;
     align-content: center;
+  }
+
+  .teste {
+    margin: 0;
   }
 
   .bandeira_cidades {
