--- a/site/style.css
+++ b/site/style.css
@@ -21,11 +21,11 @@
 #hamburger {
   display: none;
   position: fixed;
-  top: 25px;
+  top: 15px;
   right: 15px;
   z-index: 10000;
   border: 0;
-  color: #dddddd;
+  color: #999999;
   font-size: 2rem;
   background-color: transparent;
   cursor: pointer;
@@ -588,7 +588,7 @@
   }
 
   .ls {
-    width: 1vw;
+    width: 2vw;
   }
 
   .linha-vertical {
@@ -615,9 +615,9 @@
   }
 
   .subtitulo {
-    font-size: 3vw;
+    font-size: 4vw;
     margin-top: -6vw;
-    margin-left: -12vw;
+    margin-left: -18vw;
     text-shadow: 1px 0 #000000, -1px 0 #000000, 0 1px #000000, 0 -1px #000000,
       1px 1px #000000, -1px -1px #000000, 1px -1px #000000, -1px 1px #000000;
   }
@@ -773,7 +773,7 @@
     font-size: 1.2rem;
     flex-wrap: nowrap;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     padding: 0.5rem 1rem;
   }
 
@@ -802,10 +802,10 @@
   }
 
   #brasao_nav img {
-    width: 5rem;
+    width: 3.5rem;
     padding: 0.5rem;
     margin: 0rem;
-    margin-bottom: -3.5rem;
+    margin-bottom: -2.5rem;
     border-radius: 5rem;
   }
 
