--- a/site/style.css
+++ b/site/style.css
@@ -514,6 +514,9 @@
 
 #comando {
   background-image: url("img/background/bg_comando.webp");
+  background-size: cover;
+  background-position: center center;
+  color: #ffffff;
 }
 
 @media only screen and (max-width: 1024px) {
