--- a/site/style.css
+++ b/site/style.css
@@ -259,7 +259,7 @@
   text-decoration: none;
   align-self: flex-end;
   font-size: 1.5vw;
-  width: 5vw;
+  width: 6vw;
   text-align: center;
 }
 
@@ -455,8 +455,86 @@
 #mapa {
   width: 100%;
   margin: 2vw 0vw;
-  background-image: url("img/mapa/fundo_mapa.webp");
+  background-position: center center;
   background-size: cover;
+}
+
+.divisao:hover {
+  fill: rgb(255, 255, 255, 0.7);
+  transition: fill 0.4s;
+  cursor: pointer;
+}
+
+path {
+  fill: transparent;
+  stroke: #b9b9b9;
+  stroke-width: 2px;
+}
+
+.tooltip {
+  min-width: 13vw;
+  pointer-events: none;
+  position: absolute;
+  font-size: 18px;
+  text-align: center;
+  background: #ffffff;
+  padding: 0.8vw 1vw;
+  z-index: 5;
+  margin: 0;
+  color: #000000;
+  border-radius: 5px;
+  transform: translateX(-50%);
+  display: none;
+  margin-top: 6.5rem;
+}
+
+.tooltip img {
+  width: 6vw;
+  border: 1px solid #000000;
+}
+
+.tooltip h1 {
+  font-size: 1.8vw;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 0vw 1vw;
+}
+
+.tooltip h2 {
+  font-size: 1.5vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+
+.tooltip i {
+  font-size: 1.4vw;
+  margin-right: 0.25vw;
+}
+
+.tooltip p {
+  font-size: 1.3vw;
+  letter-spacing: 0.05vw;
+}
+
+.tooltip.active {
+  display: block;
+}
+
+.tooltip:after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: -10px;
+  width: 0;
+  height: 0;
+  margin-left: -10px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid #ffffff;
 }
 
 .mapa_bandeiras {
@@ -489,13 +567,17 @@
 }
 
 .mat_div_sup h2 {
-  color: #8e8e8e;
+  color: #ffffff;
   font-size: 2.2vw;
 }
 
 .mat_div_sup h3 {
-  color: #8e8e8e;
+  color: #ffffff;
   font-size: 1.2vw;
+}
+
+.mat_div_sup a {
+  color: #ffffff;
 }
 
 .bandeira {
@@ -511,7 +593,6 @@
 
 .bandeira_cidades li {
   padding: 0.5vw 0vw;
-  cursor: pointer;
 }
 
 #comando {
@@ -691,6 +772,7 @@
   }
 
   #sobre a {
+    width: 18vw;
     font-size: 4vw;
   }
 
@@ -775,6 +857,42 @@
     align-items: center;
   }
 
+  #mapa {
+    width: 95%;
+  }
+
+  .tooltip {
+    min-width: 30vw;
+    padding: 1vw 1.5vw;
+    margin-top: 5rem;
+    transform: translateX(-90%);
+  }
+
+  .tooltip img {
+    width: 15vw;
+  }
+
+  .tooltip h1 {
+    font-size: 5vw;
+  }
+
+  .tooltip h2 {
+    font-size: 4.5vw;
+  }
+
+  .tooltip i {
+    font-size: 4vw;
+    margin-right: 0.8vw;
+  }
+
+  .tooltip p {
+    font-size: 3.5vw;
+  }
+
+  .tooltip:after {
+    left: 90%;
+  }
+
   .mapa_bandeiras {
     width: 100%;
     display: flex;
@@ -792,10 +910,6 @@
     justify-content: center;
     align-items: flex-start;
     align-content: center;
-  }
-
-  .teste {
-    margin: 0;
   }
 
   .bandeira_cidades {
@@ -838,7 +952,8 @@
   }
 
   .mat_div_sup h3 {
-    font-size: 3vw;
+    font-size: 4vw;
+    margin: 0.5vw 0vw;
   }
 
   .bandeira {
@@ -970,5 +1085,30 @@
   #img3_galeria,
   #img2_galeria {
     display: none;
+  }
+
+  .tooltip {
+    min-width: 45vw;
+    padding: 2vw 2vw;
+  }
+
+  .tooltip img {
+    width: 20vw;
+  }
+
+  .tooltip h1 {
+    font-size: 7vw;
+  }
+
+  .tooltip h2 {
+    font-size: 6.5vw;
+  }
+
+  .tooltip i {
+    font-size: 6vw;
+  }
+
+  .tooltip p {
+    font-size: 5.5vw;
   }
 }
