--- a/site/style.css
+++ b/site/style.css
@@ -460,8 +460,6 @@
 #mapa {
   width: 100%;
   margin: 2vw 0vw;
-  background-position: center center;
-  background-size: cover;
 }
 
 .divisao {
@@ -712,15 +710,6 @@ path {
   padding: 7vw 0vw;
 }
 
-#contato div {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-}
-
 #contato {
   background-image: url("img/background/bg_branco.webp");
   background-position: center center;
@@ -732,6 +721,15 @@ path {
   align-items: center;
   align-content: center;
   padding: 6vw 0vw;
+}
+
+#contato div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 #contato .titulo {
@@ -782,29 +780,26 @@ path {
 
 #campos_contato h1 {
   font-family: "Oswald", sans-serif;
-  font-size: 3vw;
+  font-size: 4vw;
 }
 
 #campos_contato li {
   width: 70%;
-  margin: 0.4vw 0vw;
+  margin: 0.5vw 0vw;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
 
-#campos_contato ::placeholder {
-  color: #444444;
-  opacity: 1;
-}
-
 #campos_contato input,
 #campos_contato select,
 #wppMensagem {
   background-color: #eeeeee;
-  border: 2px solid #8e8e8e;
+  border: 2px solid #999999;
   border-radius: 0.5vw;
+  font-size: 1vw;
+  font-family: "Oswald", sans-serif;
   color: #444444;
 }
 
@@ -819,7 +814,7 @@ path {
 }
 
 #wppMensagem {
-  height: 8vw;
+  height: 10vw;
   padding: 0.5vw 0.5vw;
   width: 96.7%;
   resize: none;
@@ -832,14 +827,28 @@ path {
   outline: none;
 }
 
+#campos_contato input::placeholder,
+#wppMensagem::placeholder {
+  color: #444444;
+  opacity: 1;
+}
+
 #campos_contato button {
+  font-family: "Oswald", sans-serif;
+  letter-spacing: 0.1vw;
   padding: 0.2vw 1.5vw;
   font-size: 1.5vw;
   color: #ffffff;
-  background-color: #25d366;
+  background-color: #000000;
   border: 2px solid #8e8e8e;
   border-radius: 5vw;
   cursor: pointer;
+  transition: 0.5s;
+}
+
+#campos_contato button:hover {
+  transition: 0.5s;
+  background-color: #25d366;
 }
 
 #campos_contato button i {
@@ -854,15 +863,92 @@ path {
 #contato_mais li {
   letter-spacing: 0.1vw;
   color: #000000;
-  font-size: 1.4vw;
+  font-size: 1.6vw;
   font-family: "Oswald", sans-serif;
   text-align: center;
-  width: 8%;
+  width: 10%;
 }
 
 #contato_mais li a {
   color: #000000;
+  font-size: 2vw;
+}
+
+footer {
+  background-color: #000000;
+  padding-bottom: 5vw;
+}
+
+footer ul {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+#imgs_footer {
+  width: 100%;
+  display: flex;
+}
+
+#imgs_footer div {
+  width: 25%;
+  height: 20vw;
+  background-position: center center;
+  background-size: cover;
+  filter: grayscale(100%);
+}
+
+#logo_footer {
+  width: 100%;
+  text-align: center;
+  margin-top: 8vw;
+  margin-bottom: 2vw;
+}
+
+#logo_footer img {
+  width: 70%;
+}
+
+#info_footer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  color: #e3e3e3;
+}
+
+#info_footer div {
   font-size: 1.8vw;
+  font-family: "Oswald", sans-serif;
+  width: 35%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+#info_footer div p {
+  margin: 0vw 1vw;
+}
+
+#info_footer div i {
+  font-size: 2vw;
+}
+
+#info_footer div a {
+  color: #e3e3e3;
+}
+
+#info_footer img {
+  width: 10%;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -1219,6 +1305,126 @@ path {
     border-radius: 15vw;
     margin-bottom: 1vw;
   }
+
+  #contato {
+    padding: 15vw 0vw;
+  }
+
+  #contato div {
+    flex-direction: column;
+  }
+
+  #contato .titulo {
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 20vw;
+  }
+
+  #contato .titulo li {
+    width: 100%;
+  }
+
+  #contato .titulo h1 {
+    font-size: 15vw;
+    letter-spacing: 0.8vw;
+    line-height: 19vw;
+  }
+
+  #contato .subtitulo_deco {
+    font-size: 10vw;
+    margin: 0vw 3vw;
+  }
+
+  #campos_contato {
+    width: 100%;
+    display: flex;
+    align-content: center;
+  }
+
+  #campos_contato h1 {
+    font-size: 13vw;
+  }
+
+  #campos_contato li {
+    width: 100%;
+    margin: 1.5vw 0vw;
+    justify-content: center;
+  }
+
+  #campos_contato input,
+  #campos_contato select,
+  #wppMensagem {
+    font-size: 4vw;
+  }
+
+  #campos_contato input {
+    padding: 1vw 2vw;
+    width: 80%;
+  }
+
+  #campos_contato select {
+    padding: 1vw 2vw;
+    width: 85%;
+  }
+
+  #wppMensagem {
+    height: 40vw;
+    padding: 1vw 2vw;
+    width: 80%;
+  }
+
+  #campos_contato button {
+    letter-spacing: 0.3vw;
+    padding: 0.5vw 5vw;
+    font-size: 5vw;
+  }
+
+  #campos_contato button i {
+    margin-right: 0.8vw;
+  }
+
+  #contato_mais {
+    width: 100%;
+    margin-top: 13vw;
+  }
+
+  #contato_mais li {
+    letter-spacing: 0.2vw;
+    font-size: 5vw;
+    width: 100%;
+  }
+
+  #contato_mais li a {
+    font-size: 8vw;
+  }
+
+  #imgs_footer {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+
+  #imgs_footer div {
+    width: 50%;
+    height: 40vw;
+  }
+
+  #info_footer div {
+    font-size: 5vw;
+    width: 100%;
+  }
+
+  #info_footer div p {
+    margin: 0vw 2vw;
+  }
+
+  #info_footer div i {
+    font-size: 5vw;
+  }
+
+  #info_footer img {
+    width: 20%;
+    margin: 1vw 0vw;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -1385,11 +1591,11 @@ path {
   }
 
   .cargos h1 {
-    font-size: 7vw;
+    font-size: 6.5vw;
   }
 
   .cargos h2 {
-    font-size: 6.5vw;
+    font-size: 6vw;
   }
 
   #quadro_comando .subtitulo_deco {
@@ -1397,8 +1603,8 @@ path {
   }
 
   .cargo_img {
-    width: 55vw;
-    height: 70vw;
+    width: 50vw;
+    height: 65vw;
     border-radius: 35vw;
     margin-bottom: 1vw;
   }
