Ajuste nav fixo

--- a/site/style.css
+++ b/site/style.css
@@ -996,26 +996,55 @@ footer ul {
     margin: 2vw;
   }
 
+  #hamburger {
+    display: block;
+  }
+
   #nav_fixo {
-    font-size: 2.8vw;
+    font-size: 1.2rem;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5rem 1rem;
+
     flex-wrap: nowrap;
   }
 
   .opcao_navfixo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+
     margin: 0rem 0.4vw;
     padding: 0;
   }
 
   .opcao_navfixo li {
-    background-color: #000000;
-    width: 12vw;
+    display: none;
+    background-color: #dddddd;
+    color: #000000;
+    padding: 0.2rem 0rem;
+    margin: 0.2rem 0rem;
+    width: 100%;
+    border-radius: 0.2rem;
+  }
+
+  .opcao_navfixo li:hover {
+    background-color: #101010;
+    color: #ffffff;
   }
 
   #brasao_nav img {
-    width: 14vw;
-    padding: 0.8vw;
-    margin-bottom: -5vw;
-    border-radius: 8.5vw;
+    width: 12vw;
+    padding: 1.5vw;
+    margin: 0;
+    margin-bottom: -8vw;
+    border-radius: 10vw;
+  }
+
+  #brasao_nav {
+    order: -1;
   }
 
   #nav_menu {
@@ -1282,7 +1311,7 @@ footer ul {
   }
 
   #quadro_comando .subtitulo_deco {
-    font-size: 2vw;
+    font-size: 2.5vw;
   }
 
   .cargos li {
@@ -1291,11 +1320,11 @@ footer ul {
   }
 
   .cargos h1 {
-    font-size: 3.2vw;
+    font-size: 4vw;
   }
 
   .cargos h2 {
-    font-size: 3vw;
+    font-size: 3.5vw;
   }
 
   .cargo_img {
@@ -1427,54 +1456,6 @@ footer ul {
 }
 
 @media only screen and (max-width: 480px) {
-  #hamburger {
-    display: block;
-  }
-
-  #nav_fixo {
-    font-size: 1.2rem;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    align-items: center;
-    padding: 0.5rem 1rem;
-  }
-
-  .opcao_navfixo {
-    width: 100%;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-  }
-
-  .opcao_navfixo li {
-    display: none;
-    background-color: #dddddd;
-    color: #000000;
-    padding: 0.2rem 0rem;
-    margin: 0.2rem 0rem;
-    width: 100%;
-    border-radius: 0.2rem;
-  }
-
-  .opcao_navfixo li:hover {
-    background-color: #101010;
-    color: #ffffff;
-  }
-
-  #brasao_nav img {
-    width: 3.5rem;
-    padding: 0.5rem;
-    margin: 0rem;
-    margin-bottom: -2.5rem;
-    border-radius: 5rem;
-  }
-
-  #brasao_nav {
-    order: -1;
-  }
-
   .contador_titulo {
     line-height: 6vw;
     font-size: 5.5vw;
