--- a/site/style.css
+++ b/site/style.css
@@ -26,7 +26,7 @@
   z-index: 10000;
   border: 0;
   color: #999999;
-  font-size: 2rem;
+  font-size: 8vw;
   background-color: transparent;
   cursor: pointer;
 }
